hphp/test/zend/bad/Zend/tests/bug64966.php.expectf
HipHop Fatal error: %s
Stack trace:
#0 [internal function]: {closure}(4096, 'Argument 1 pass...', '%s', 6, Array)
#1 %sbug64966.php(6): iterator_apply('')
#2 %sbug64966.php(12): test('iterator_apply')
#3 %sbug64966.php(17): A->b()
#4 {main}
  thrown in %sbug64966.php on line 3